fixed modal spacing on desktop

--- a/frontend/sass/norent/_modal-overrides.scss
+++ b/frontend/sass/norent/_modal-overrides.scss
@@ -1,5 +1,10 @@
 .modal-content {
-  .content h1.title {
-    font-size: 2.25rem;
+  .content {
+    @include tablet {
+      padding: 2.5rem 4rem;
+    }
+    h1.title {
+      font-size: 2.25rem;
+    }
   }
 }
